--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "AwesomeProject",
+  "name": "cruz_alert",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.1",
+    "babel-preset-react-native": "^4.0.0",
     "jest-expo": "26.0.0",
+    "react-native-dotenv": "^0.1.1",
+    "react-native-scripts": "1.13.1",
     "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,7 +22,21 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
+    "firebase": "^4.12.1",
     "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0"
-  }
+    "react-native": "0.54.0",
+    "react-native-firebase": "^4.0.1",
+    "react-native-google-signin": "^0.12.0"
+  },
+  "description": "Cruz Alert is two way communication channel between police and users",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aadabi/cruz_alert.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aadabi/cruz_alert/issues"
+  },
+  "homepage": "https://github.com/aadabi/cruz_alert#readme"
 }
