--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 ./node_modules
 .expo/
 node_modules/
+android/app/google-services.json
+android/build/
+android/.idea/workspace.xml
+android/.idea/libraries
+android/.DS_Store
+android/.gradle
+*.iml
+android/local.properties
+android/app/build
+
