--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,19 +136,26 @@ android {
     }
 }
 
-apply plugin: 'com.google.gms.google-services'
 
 dependencies {
-    compile(project(':react-native-firebase')) {
+    api (project(':react-native-google-signin')) {
+        exclude group: "com.google.android.gms"
+    }
+    api(project(':react-native-firebase')) {
         transitive = false
     }
 
-    implementation "com.google.android.gms:play-services-base:11.4.2"
-    implementation "com.google.firebase:firebase-core:11.4.2"
+    // RNFirebase requirements
+    implementation "com.google.android.gms:play-services-base:12.0.0"
+    implementation "com.google.firebase:firebase-core:12.0.0"
 
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    // RNFirebase modules
+    implementation 'com.google.android.gms:play-services-auth:12.0.0'
+    implementation 'com.google.firebase:firebase-database:12.0.0'
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:23.0.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
@@ -157,3 +164,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+apply plugin: 'com.google.gms.google-services'
+
