--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react-native": "^4.0.0",
     "jest": "^22.4.3",
     "jest-react-native": "^18.0.0",
+    "prettier": "^1.12.1",
     "react-native-dotenv": "^0.1.1",
     "react-test-renderer": "16.3.0-alpha.1"
   },
@@ -28,7 +29,8 @@
     "react-native-navigation": "^1.1.444",
     "react-navigation": "^1.5.11"
   },
-  "description": "Cruz Alert is two way communication channel between police and users",
+  "description":
+    "Cruz Alert is two way communication channel between police and users",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aadabi/cruz_alert.git"
