--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
   },
   "dependencies": {
     "firebase": "^4.12.1",
-    "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-firebase": "^4.0.3",
     "react-native-google-signin": "^0.12.0",
-    "react-native-navigation": "^1.1.444",
     "react-navigation": "^1.5.11"
   },
-  "description":
-    "Cruz Alert is two way communication channel between police and users",
+  "description": "Cruz Alert is two way communication channel between police and users",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aadabi/cruz_alert.git"
