--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "fb-watchman": "^2.0.0",
     "firebase": "^4.12.1",
     "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
