--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "firebase": "^4.12.1",
     "react": "16.3.0-alpha.1",
+    "react-google-button": "^0.5.3",
+    "react-google-login": "^3.2.1",
     "react-native": "0.54.0",
     "react-native-firebase": "^4.0.3",
     "react-native-google-signin": "^0.12.0",
