--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,10 @@
 node_modules/
 android/app/google-services.json
 android/build/
-android/.idea/workspace.xml
-android/.idea/libraries
-android/.idea/caches
+android/.idea/*
 android/.DS_Store
 android/.gradle
 *.iml
 android/local.properties
 android/app/build
-
+ios/build
