--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.54.0",
     "react-native-firebase": "^4.0.3",
     "react-native-google-signin": "^0.12.0",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^1.5.11"
   },
   "description": "Cruz Alert is two way communication channel between police and users",
