--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "react-google-button": "^0.5.3",
     "react-google-login": "^3.2.1",
     "react-native": "0.54.0",
+    "react-native-camera": "^1.1.4",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.0.3",
     "react-native-google-signin": "^0.12.0",
+    "react-native-image-picker": "^0.26.10",
     "react-native-maps": "^0.21.0",
     "react-navigation": "^1.5.12"
   },
