--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-google-signin": "^0.12.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-maps": "^0.21.0",
+    "react-native-material-bottom-navigation": "^1.0.0",
     "react-navigation": "^1.5.12"
   },
   "description": "Cruz Alert is two way communication channel between police and users",
